kubernetes/applications/media/manifests/sonarr/sonarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr:4.0.19
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: run
              mountPath: /run
          ports:
            - containerPort: 8989
          securityContext:
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: run
          emptyDir: {}
